# border_guard

./: .dockerignore  .env.compose  .gitignore  Makefile  README  README.md  cron.env  docker-compose.yml  main.py  pyproject.toml  rabbitmq.conf  requirements.txt  setup.sh
api/: .gitignore  Dockerfile  Makefile  README.md  db.py  docker-compose.yml  entrypoint-local.sh  main.py  requirements.lock.txt  requirements.txt  schemas.py  weights.py
api/image_processing/: dehaze.py  guidedfilter.py  night_illumination.py  utils.py
migrations/: Dockerfile  README.md  docker-entrypoint.sh  models.py  models_dist.py  requirements.txt  update_models.sh
parser/: .gitignore  Dockerfile  Makefile  README copy.md  README.md  check_folders.py  cron.env  cron.sh  docker-entrypoint.sh  entrypoint.sh  main.py  models.py  requirements.txt  send_msg.py  setup.sh  setup_cron.py  setup_cron.sh  setup_models.sh  slim.Dockerfile  urls.csv  utils.py  validate_photos.py
stats/: Dockerfile  Makefile  custom_charts.py  custom_enums.py  data.py  display.py  main.py  requirements.txt
worker/: Makefile  README.md  celery.Dockerfile  celery_config.py  celeryconfig.py  main.py  mini_worker.py  models.py  requirements.txt
worker/worker/: consumer.py  env.py  main.py  tasks.py
