[tool.poetry]
name = "Scraper"
version = "0.1.0"
description = "Border guard."
authors = ["-"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"
seleniumbase = "^4.9.11"
undetected-chromedriver = "^3.1.7"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"
pytest = "^7.1.2"
httpx = "^0.23.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"